# szip

./: CMakeLists.txt  COPYING  CTestConfig.cmake  INSTALL  Makefile.in  README  RELEASE.txt  UserMacros.cmake  aclocal.m4  burst_szip.c  config.h.in  configure  configure.ac  example.c  gentest.c  hdfi.h  mcgill.c  mcgill.h  rice.c  rice.h  ricehdf.h  sz_api.c  szconf.h  szip_adpt.h  szlib.h
all/: all.dsw  all.opt
all/all/: all.plg
all/burst_szip/: burst_szip.dsp
all/example/: example.dsp  example.plg
all/lib/: lib.dsp  lib.plg
all/lib/Debug/: lib.pch  szlib.lib
all/libdll/: libdll.dsp  libdll.plg
all/libdll/Debug/: libdll.pch  szlibdll.exp  szlibdll.lib
codewarrior/: szip.lib  szip.mcp
config/cmake/: CheckTypeSize.cmake  ConfigureChecks.cmake  ConversionTests.c  HDFMacros.cmake  SZIP-config-version.cmake.in  SZIP-config.cmake.build.in  SZIP-config.cmake.install.in  SZIPMacros.cmake  SZconfig.h.in  cacheinit.cmake  szip-config-version.cmake.in  szip-config.cmake.in
config/cmake/UserMacros/: Windows_MT.cmake
examples/: CMakeLists.txt  Makefile.am  Makefile.in  README
src/: CMakeLists.txt  Makefile.am  Makefile.in  SZconfig.h.in  encoding.c  rice.c  rice.h  sz_api.c  szip_adpt.h  szlib.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  gentest.c
